# events-reader

./: .gitignore  README.md  flake.nix
firmware/: CMakeLists.txt  Cargo.toml  Makefile  flake.nix  flashwb.sh  lwipopts.h
firmware/src/: main.c  main.rs
firmware/src/domain/: domain.h
firmware/src/networking/: networking.c  networking.h
firmware/src/nfc/: nfc.h
firmware/src/sched/: sched.c  sched.h
firmware/src/storage/: storage.h
